# idatt2104-CRDT-Notes

./: .dockerignore  .env.example  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  crdt.cpp  crdt.hpp  docker-compose.yml  server.js
.github/workflows/: ci.yml
backend/: Dockerfile  crdt_bridge.cpp  package-lock.json  package.json  server.js
backend/main/: CMakeLists.txt  crdt.cpp
backend/test/: crdt_tests.cpp  server.test.js
cpp/: CMakeLists.txt  crdt.cpp  crdt.hpp  crdt_tests.cpp  crdt_wasm.cpp
database/: schema.sql
frontend/: Dockerfile  editor.html  editor.js  login.html  login.js  package-lock.json  package.json  server.js  styles.css  websocket.js
frontend/stores/: editor.js  home.js  login.js  websocket.js
frontend/test/: helpers.js  home.test.js  login.test.js
frontend/views/: editor.html  home.html  login.html
